2003-12-17  Chris Blumenberg  <cblu@apple.com>

	Fixed:
	<rdar://problem/3393758>: REGRESSION (85-100): Flash onKeyUp event non-functional
	<rdar://problem/3479020>: REGRESSION (85-100): Safari sends plug-in key events to wrong instance of plug-in

        Reviewed by darin.

        * Plugins.subproj/WebBaseNetscapePluginView.h:
        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView sendEvent:]): set suspendKeyUpEvents to NO
        (-[WebBaseNetscapePluginView keyMessageForEvent:]): copied from CVS
        (-[WebBaseNetscapePluginView keyUp:]): if !suspendKeyUpEvents, send the keyUp event
        (-[WebBaseNetscapePluginView keyDown:]): set suspendKeyUpEvents to YES
        (-[WebBaseNetscapePluginView windowBecameKey:]): call SetUserFocusWindow

2003-12-17  Darin Adler  <darin@apple.com>

        Reviewed by Richard.

        - fixed 3513274: REGRESSION: anchor navigation within frames with "Back" is broken at tivofaq.com

        * WebView.subproj/WebDataSource.m: (-[WebDataSource _setURL:]):
        Since this method is only used when you do a fragment scroll, we need to update
        the original request as well as the request. This ensure that the fragment gets
        recorded in the history item (which goes in the back/forward history).

=== Safari-118 ===

2003-12-17  John Sullivan  <sullivan@apple.com>

        - fixed <rdar://problem/3512801>: REGRESSION (Safari 100-116): 
        Mike Hay's Magic 8-ball game ignores slow clicks

        Reviewed by Darin.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _handleAutoscrollForMouseDragged:]):
        start the autoscroll timer here, so the timer only runs when KHTML is
        handling the event.
        (-[WebHTMLView mouseDown:]):
        don't start the autoscroll timer here.

2003-12-16  Ken Kocienda  <kocienda@apple.com>

        Reviewed by me

        * WebCoreSupport.subproj/WebBridge.m: ObjC runtime needs a declaration for new